# flexbe_app

./: .flake8  .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  flexbe.desktop  package.json  package.xml
.github/workflows/: flexbe_ci.yml  main.yml
launch/: flexbe_full.launch  flexbe_full.launch.py  flexbe_ocs.launch  flexbe_ocs.launch.py  test_report.test  test_report_test.py
src/: events.js  main.js  prototype.js  window.html  window.js
src/_helper/: activitytracer.js  autocomplete.js  checking.js  command_lib.js  tools.js  varsolver.js
src/_model/: behavior.js  behaviorstate.js  note.js  state.js  statemachine.js  transition.js
src/_test/: checkbehaviorsreport.js  scripts.js  statelib.test.js  testreport.js
src/_testing/: scripts.js  test.js
src/drawable/: drawable.js  drawable_behaviorstate.js  drawable_containerpath.js  drawable_helper.js  drawable_note.js  drawable_outcome.js  drawable_state.js  drawable_statemachine.js  drawable_transition.js
src/ext/: d3.min.js  json_parse_raw.js  mousetrap.min.js  raphael.js  yaml.min.js
src/io/: io.js  io_behaviorloader.js  io_behaviorpacker.js  io_behaviorsaver.js  io_codegenerator.js  io_codeparser.js  io_filesystem.js  io_manifestgenerator.js  io_manifestparser.js  io_modelgenerator.js  io_packagegenerator.js  io_packageparser.js  io_stateparser.js
src/rc/: rc.js  rc_controller.js  rc_pubsub.js  rc_ros.js  rc_sync.js
src/ros/: ros.js  ros_actionclient.js  ros_publisher.js  ros_subscriber.js
src/style/: dashboard.css  main.css  popup.css  runtimecontrol.css  settings.css  statemachine.css
src/ui/: ui.js  ui_dashboard.js  ui_feed.js  ui_menu.js  ui_runtimecontrol.js  ui_settings.js  ui_statemachine.js  ui_tools.js
src/ui/panels/: ui_panels.js  ui_panels_addstate.js  ui_panels_selectbehavior.js  ui_panels_stateproperties.js  ui_panels_terminal.js
src/ws/: ws.js  ws_behaviorlib.js  ws_behaviorstatedefinition.js  ws_documentation.js  ws_statedefinition.js  ws_statelib.js  ws_statemachinedefinition.js
