<package>
  <name>flexbe_app</name>
  <version>2.3.0</version>
  <description>
     flexbe_app provides a user interface (editor + runtime control) for the FlexBE behavior engine.
  </description>
  <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_app</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>curl</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>libasound2-dev</run_depend>
  <run_depend>libgtk-3-dev</run_depend>
  <run_depend>libnss3-dev</run_depend>
  <run_depend>libxss1</run_depend>

  <run_depend>rospy</run_depend>
  <run_depend>genpy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>rospack</run_depend>

  <run_depend>flexbe_onboard</run_depend>
  <run_depend>flexbe_mirror</run_depend>
  <run_depend>flexbe_widget</run_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>flexbe_msgs</run_depend>

  <test_depend>rosunit</test_depend>

</package>
